--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>猎</h1>
+							<h1>心之所向</h1>
 							<p>我的名单上又多了一个名字 <a href="https://weibo.com/IamYaphetS">@YaphetS</a> / <a href="https://www.douyu.com/pis/">Pis</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
